--- a/public/ExpenseTracker/index.html
+++ b/public/ExpenseTracker/index.html
@@ -20,13 +20,18 @@
         <select id="category" name="category">
             <option value="fuel">fuel</option>
             <option value="food">food</option>
-            <option value="electricity">electricity</option>
+            <option value="shopping">shopping</option>
             <option value="Movie">Movie</option>
+            <option value="Other">Others</option>
         </select>
         <button>Add Expense</button>
     </form>
     <div id="message"></div>
     <button id="rzp-button1">Buy Premium</button>
+    <div class="content">
+        <ul id="listOfExpenses"></ul>
+        <ul id="leaderboard"></ul>
+    </div>
     <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
     
     <ul id='listOfExpenses'></ul>
